Add functions to run local tests and compare results

--- a/notebooks/02-local-QARTOD-test.ipynb
+++ b/notebooks/02-local-QARTOD-test.ipynb
@@ -14,6 +14,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f9f95658",
    "metadata": {},
@@ -57,7 +58,6 @@
    "outputs": [],
    "source": [
     "# Import OOINet library - might delete\n",
-    "sys.path.append(\"c:\\\\Users\\\\cooleyky\\\\Documents\\\\GitHub\\\\OOINet\") # this is what was missing from the steps I followed to install ooinet and ooi-data-explorations as local dev repo\n",
     "from ooinet import M2M\n",
     "from ooinet.Instrument.common import process_file"
    ]
@@ -70,7 +70,6 @@
    "outputs": [],
    "source": [
     "# Import functions from ooi-data-explorations library - might delete\n",
-    "sys.path.append(\"c:\\\\Users\\\\cooleyky\\\\Documents\\\\GitHub\\\\ooi-data-explorations\\\\python\") # why did the initial install not include this?\n",
     "from ooi_data_explorations.uncabled.process_dosta import dosta_datalogger\n",
     "from ooi_data_explorations.combine_data import combine_datasets"
    ]
@@ -91,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use reference designator, data stream, and method to build file name and path for chosen dataset\n",
+    "# Set reference designator, data stream, and method \n",
     "\n",
     "site = \"CP01CNSM\"                                   # Coastal Pioneer Array (NES) - Central Surface Mooring\n",
     "node = \"MFD37\"                                      # \n",
@@ -124,7 +123,7 @@
    "source": [
     "# Build filename and path to interim data\n",
     "\n",
-    "def test_data_path(refdes,method,stream,type,folder='interim'):\n",
+    "def build_data_path(refdes,method,stream,type,folder='interim'):\n",
     "    # Input: \n",
     "    #   refdes: string built from OOI site, node, and sensor for chosen dataset\n",
     "    #   method: 'recovered_inst', 'recovered_host', or 'telemetered'(?) \n",
@@ -143,7 +142,7 @@
     "    \n",
     "    return ds_path\n",
     "\n",
-    "ds_path = test_data_path(refdes,method,stream,'prod')\n",
+    "ds_path = build_data_path(refdes,method,stream,'prod')\n",
     "ds_path"
    ]
   },
@@ -619,7 +618,7 @@
    "id": "499a4f2e",
    "metadata": {},
    "source": [
-    "### Identify Test Parameters\n",
+    "### Identify Test Parameters and Parse Expected Results\n",
     "\n",
     "Next, identify which parameters in the dataset have QARTOD applied to them. Sometimes the variable name in the dataset is different that the key that is used by OOINet to build the datasets. For that we can check the attributes of the variable for the \"alternate_parameter_name\"!"
    ]
@@ -667,12 +666,95 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "596759f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# I think my plan was actually to put this in a separate notebook where I do the comparison to save memory\n",
+    "\n",
+    "import io\n",
+    "import ast\n",
+    "import requests\n",
+    "\n",
+    "def parse_qartod_executed(ds, parameters):\n",
+    "    \"\"\"\n",
+    "    Parses the qartod tests for the given parameter into separate variables.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    ds: xarray.DataSet\n",
+    "        The dataset downloaded from OOI with the QARTOD flags applied.\n",
+    "    parameters: list[str]\n",
+    "        The name of the parameters in the dataset to parse the QARTOD flags\n",
+    "        \n",
+    "    Returns\n",
+    "    -------\n",
+    "    ds: xarray.DataSet\n",
+    "        The dataset with the QARTOD test for the given parameters split out\n",
+    "        into new seperate data variables using the naming convention:\n",
+    "        {parameter}_qartod_{test_name}\n",
+    "    \"\"\"\n",
+    "    # For the params into a list if only a string\n",
+    "    if type(parameters) is not list:\n",
+    "        parameters = list(parameters)\n",
+    "    \n",
+    "    # Iterate through each parameter\n",
+    "    for param in parameters:\n",
+    "        # Generate the qartod executed name\n",
+    "        qartod_name = f\"{param}_qartod_executed\"\n",
+    "        \n",
+    "        if qartod_name not in ds.variables:\n",
+    "            continue\n",
+    "    \n",
+    "        # Fix the test types\n",
+    "        ds[qartod_name] = ds[qartod_name].astype(str)\n",
+    "    \n",
+    "        # Get the test order\n",
+    "        test_order = ds[qartod_name].attrs[\"tests_executed\"].split(\",\")\n",
+    "    \n",
+    "        # Iterate through the available tests and create separate variables with the results\n",
+    "        for test in test_order:\n",
+    "            test_index = test_order.index(test)\n",
+    "            test_name = f\"{param}_qartod_{test.strip()}\"\n",
+    "            ds[test_name] = ds[qartod_name].str.get(test_index)\n",
+    "\n",
+    "    return ds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04acf6f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Put the test parameter names in the dataset into a list\n",
+    "parameters = [x for x in test_parameters.keys()]\n",
+    "parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7e17c86",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Parse all of the variables with QARTOD tests applied into separate tests\n",
+    "ds = parse_qartod_executed(data, parameters)\n",
+    "ds"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "fdcd8646",
    "metadata": {},
    "source": [
-    "### Collect test QARTOD value tables from GitHub"
+    "### Collect test QARTOD lookup value tables from GitHub\n",
+    "We can grab the QARTOD tables with the test values straight from GitHub, which ensures we are using the same input and threshold values as OOINet. However, the QARTOD tables utilize the ```ooinet_parameter_name``` instead of the dataset variable name. Thus, when loading the tables we need to make sure we are requesting the correct parameter name."
    ]
   },
   {
@@ -681,7 +763,90 @@
    "id": "31ca9485",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "GITHUB_BASE_URL = \"https://raw.githubusercontent.com/oceanobservatories/qc-lookup/master/qartod\"\n",
+    "\n",
+    "def load_gross_range_qartod_test_values(refdes, stream, ooinet_param):\n",
+    "    \"\"\"\n",
+    "    Load the gross range QARTOD test from gitHub\n",
+    "    \"\"\"\n",
+    "    subsite, node, sensor = refdes.split(\"-\", 2)\n",
+    "    sensor_type = sensor[3:8].lower()\n",
+    "    \n",
+    "    # gitHub url to the gross range table\n",
+    "    GROSS_RANGE_URL = f\"{GITHUB_BASE_URL}/{sensor_type}/{sensor_type}_qartod_gross_range_test_values.csv\"\n",
+    "    \n",
+    "    # Download the results\n",
+    "    download = requests.get(GROSS_RANGE_URL)\n",
+    "    if download.status_code == 200:\n",
+    "        df = pd.read_csv(io.StringIO(download.content.decode('utf-8')))\n",
+    "        df[\"parameters\"] = df[\"parameters\"].apply(ast.literal_eval)\n",
+    "        df[\"qcConfig\"] = df[\"qcConfig\"].apply(ast.literal_eval)\n",
+    "        \n",
+    "    # Next, filter for the desired parameter\n",
+    "    mask = df[\"parameters\"].apply(lambda x: True if x.get(\"inp\") == ooinet_param else False)\n",
+    "    df = df[mask]\n",
+    "    \n",
+    "    # Now filter for the desired stream\n",
+    "    df = df[(df[\"subsite\"] == subsite) & \n",
+    "            (df[\"node\"] == node) & \n",
+    "            (df[\"sensor\"] == sensor) &\n",
+    "            (df[\"stream\"] == stream)]\n",
+    "    \n",
+    "    return df\n",
+    "\n",
+    "\n",
+    "def load_climatology_qartod_test_values(refdes, param):\n",
+    "    \"\"\"\n",
+    "    Load the OOI climatology qartod test values table from gitHub\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    refdes: str\n",
+    "        The reference designator for the given sensor\n",
+    "    param: str\n",
+    "        The name of the \n",
+    "    \"\"\"\n",
+    "    \n",
+    "    site, node, sensor = refdes.split(\"-\", 2)\n",
+    "    sensor_type = sensor[3:8].lower()\n",
+    "    \n",
+    "    # gitHub url to the climatology tables\n",
+    "    CLIMATOLOGY_URL = f\"{GITHUB_BASE_URL}/{sensor_type}/climatology_tables/{refdes}-{param}.csv\"\n",
+    "    \n",
+    "    # Download the results\n",
+    "    download = requests.get(CLIMATOLOGY_URL)\n",
+    "    if download.status_code == 200:\n",
+    "        df = pd.read_csv(io.StringIO(download.content.decode('utf-8')), index_col=0)\n",
+    "        df = df.applymap(ast.literal_eval)\n",
+    "    else:\n",
+    "        return None\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9654ce06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example: load the gross range QARTOD table for a specific parameter\n",
+    "gross_range_qartod_test_values = load_gross_range_qartod_test_values(refdes, stream, \"ctdbp_seawater_temperature\")\n",
+    "gross_range_qartod_test_values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e753d009",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example: load the climatology QARTOD table for a specific parameter\n",
+    "climatology_qartod_test_values = load_climatology_qartod_test_values(refdes, \"ctdbp_seawater_temperature\")\n",
+    "climatology_qartod_test_values"
+   ]
   },
   {
    "attachments": {},
@@ -689,7 +854,10 @@
    "id": "9b119cdf",
    "metadata": {},
    "source": [
-    "### Run QARTOD tests locally"
+    "### Run QARTOD tests locally\n",
+    "Next, we run the gross range test locally to get local results that can be compared with the output from the tests. This is done using the ```ioos_qc``` QARTOD package in conjunction with the ```qartod_test_values``` tables.\n",
+    "\n",
+    "#### Gross Range Test"
    ]
   },
   {
@@ -698,7 +866,140 @@
    "id": "d093c4e2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Import the ioos_qc QARTOD package tests\n",
+    "from ioos_qc.qartod import gross_range_test, climatology_test, ClimatologyConfig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53c385d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run through all of the parameters which had the QARTOD tests applied by OOINet and\n",
+    "# run the tests locally, saving the results in a dictionary\n",
+    "gross_range_results = {}\n",
+    "for param in test_parameters:\n",
+    "    # Get the ooinet name\n",
+    "    ooinet_name = test_parameters.get(param)\n",
+    "    \n",
+    "    # Load the gross_range_qartod_test_values from gitHub\n",
+    "    gross_range_qartod_test_values = load_gross_range_qartod_test_values(refdes, stream, ooinet_name)\n",
+    "    \n",
+    "    # Get the qcConfig object, the fail_span, and the suspect_span\n",
+    "    qcConfig = gross_range_qartod_test_values[\"qcConfig\"].values[0]\n",
+    "    fail_span = qcConfig.get(\"qartod\").get(\"gross_range_test\").get(\"fail_span\")\n",
+    "    suspect_span = qcConfig.get(\"qartod\").get(\"gross_range_test\").get(\"suspect_span\")\n",
+    "    \n",
+    "    # Run the gross_range_tenst\n",
+    "    param_results = gross_range_test(\n",
+    "        inp = ds[param].values,\n",
+    "        fail_span = fail_span,\n",
+    "        suspect_span = suspect_span)\n",
+    "    \n",
+    "    # Save the results\n",
+    "    gross_range_results.update(\n",
+    "        {param: param_results}\n",
+    "    )\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65b8ee16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check that gross_range_results contains the tests results\n",
+    "gross_range_results"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "25594bb3",
+   "metadata": {},
+   "source": [
+    "#### Climatology Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97f0f529",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run through all of the parameters which had the QARTOD tests applied by OOINet and\n",
+    "# run the tests locally, saving the results in a dictionary\n",
+    "climatology_results = {}\n",
+    "\n",
+    "for param in test_parameters:\n",
+    "    # Get the ooinet name\n",
+    "    ooinet_name = test_parameters.get(param)\n",
+    "    \n",
+    "    # Load the gross_range_qartod_test_values from gitHub\n",
+    "    climatology_qartod_test_values = load_climatology_qartod_test_values(refdes, ooinet_name)\n",
+    "    \n",
+    "    if climatology_qartod_test_values is None:\n",
+    "        climatology_results.update({\n",
+    "            param: \"Not implemented.\"\n",
+    "        })\n",
+    "        continue\n",
+    "    \n",
+    "    # Initialize a climatology config object\n",
+    "    c = ClimatologyConfig()\n",
+    "    \n",
+    "    # Iterate through the pressure ranges\n",
+    "    for p_range in climatology_qartod_test_values.index:\n",
+    "        # Get the pressure range\n",
+    "        pmin, pmax = ast.literal_eval(p_range)\n",
+    "\n",
+    "        # Convert the pressure range values into a dictionary\n",
+    "        p_values = climatology_qartod_test_values.loc[p_range].to_dict()\n",
+    "\n",
+    "        # Check the pressure values. If [0, 0], then set the range [0, 5000]\n",
+    "        if pmax == 0:\n",
+    "            pmax = 5000\n",
+    "\n",
+    "        for tspan in p_values.keys():\n",
+    "            # Get the time span\n",
+    "            tstart, tend = ast.literal_eval(tspan)\n",
+    "\n",
+    "            # Get the values associated with the time span\n",
+    "            vmin, vmax = p_values.get(tspan)\n",
+    "\n",
+    "            # Add the test to the climatology config object\n",
+    "            c.add(tspan=[tstart, tend],\n",
+    "                  vspan=[vmin, vmax],\n",
+    "                  fspan=[fail_span[0], fail_span[1]],\n",
+    "                  zspan=[pmin, pmax],\n",
+    "                  period=\"month\")\n",
+    "\n",
+    "    # Run the climatology test\n",
+    "    param_results = climatology_test(c,\n",
+    "                                     inp=ds[param],\n",
+    "                                     tinp=ds[\"time\"],\n",
+    "                                     zinp=ds[\"sea_water_pressure\"])\n",
+    "    \n",
+    "    # Append the results\n",
+    "    climatology_results.update({\n",
+    "        param: param_results\n",
+    "    })"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8bb62e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "climatology_results"
+   ]
   },
   {
    "attachments": {},
@@ -716,9 +1017,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results_path = test_data_path(refdes,method,stream,(type+'-result'),folder='processed') # Build path with filename to folder for saved results\n",
+    "gr_results_path = build_data_path(refdes,method,stream,(type+'-gr-result'),folder='processed') # Build path with filename to folder for saved results\n",
     "\n",
-    "local_qartod_result.to_netcdf(results_path)                                             # write netCDF file with results to processed data folder"
+    "gross_range_results.to_netcdf(gr_results_path)                                             # write netCDF file with results to processed data folder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db7e56d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clim_results_path = build_data_path(refdes,method,stream,(type+'-clim-result'),folder='processed') # Build path with filename to folder for saved results\n",
+    "\n",
+    "climatology_results.to_netcdf(clim_results_path)                                             # write netCDF file with results to processed data folder"
    ]
   }
  ],
