--- a/notebooks/04-Summary-statistics.ipynb
+++ b/notebooks/04-Summary-statistics.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "99412598",
+   "metadata": {},
+   "source": [
+    "# Descriptive Statistics\n",
+    "Next, we want to calculate the statistics of the different QARTOD flags for the different tests that are applied to the different parameters in the dataset. The example ```qartod_results_summary``` below simply counts the total number of different flags (e.g 1, 3, 4) and their relative percentages for each test (gross range, climatology, etc) for each parameter that the tests area applied to. "
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8c9bbd7b",
    "metadata": {},
@@ -32,32 +43,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "962933a4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Import OOINet library\n",
-    "sys.path.append(\"c:\\\\Users\\\\cooleyky\\\\Documents\\\\GitHub\\\\OOINet\") # this is what was missing from the steps I followed to install ooinet and ooi-data-explorations as local dev repo\n",
-    "from ooinet import M2M\n",
-    "from ooinet.Instrument.common import process_file"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c4896738",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Import functions from ooi-data-explorations library\n",
-    "sys.path.append(\"c:\\\\Users\\\\cooleyky\\\\Documents\\\\GitHub\\\\ooi-data-explorations\\\\python\") # why did the initial install not include this?\n",
-    "from ooi_data_explorations.uncabled.process_dosta import dosta_datalogger\n",
-    "from ooi_data_explorations.combine_data import combine_datasets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "3c90a8a1",
    "metadata": {},
    "outputs": [],
@@ -65,6 +50,110 @@
     "# Import dask tools and ProgressBar\n",
     "import dask\n",
     "from dask.diagnostics import ProgressBar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08d21460",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def qartod_results_summary(ds, params, tests):\n",
+    "    \"\"\"\n",
+    "    Calculate the statistics for parameter qartod flags.\n",
+    "    \n",
+    "    This function takes in a list of the parameters and\n",
+    "    the associated QARTOD tests to calculate the number\n",
+    "    of each flag and the percent of the flag.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    ds: xarray.DataSet\n",
+    "        An xarray dataset which contains the data\n",
+    "    params: list[strings]\n",
+    "        A list of the variables/parameters in the given\n",
+    "        dataset that have been tested with QARTOD\n",
+    "    tests: list[strings]\n",
+    "        A list of the QARTOD test names which to parse\n",
+    "        for the given parameters.\n",
+    "        \n",
+    "    Returns\n",
+    "    -------\n",
+    "    results: dict\n",
+    "        A dictionary which contains the number of each\n",
+    "        QARTOD flag and the percent of the total flags\n",
+    "        for each test applied to each parameter in the\n",
+    "        given dataset.\n",
+    "        \n",
+    "        results = {'parameter':\n",
+    "                        {'test_name':\n",
+    "                            {'total data points': int,\n",
+    "                            'good data points': (int, %),\n",
+    "                            'suspect data points': (int, %),\n",
+    "                            'bad data points': (int, %)}\n",
+    "                            },\n",
+    "                        }\n",
+    "    \"\"\"\n",
+    "    # Check that the inputs are a list\n",
+    "    if type(params) is not list:\n",
+    "        params = [params]\n",
+    "        \n",
+    "    if type(tests) is not list:\n",
+    "        tests = [tests]\n",
+    "    \n",
+    "    # Initialize the result dictionary and iterate \n",
+    "    # through the parameters for each test\n",
+    "    results = {}\n",
+    "    for param in params:\n",
+    "        \n",
+    "        # Now iterate through each test\n",
+    "        test_results = {}\n",
+    "        for test in tests:\n",
+    "            \n",
+    "            # First, check that the test was applied\n",
+    "            test_name = f\"{param}_qartod_{test}_test\"\n",
+    "            if test_name not in ds.variables:\n",
+    "                continue\n",
+    "                \n",
+    "            # Count the total number of values\n",
+    "            n = ds[test_name].count().compute().values\n",
+    "            \n",
+    "            # First calculate the gross range results\n",
+    "            good = np.where(ds[test_name] == \"1\")[0]\n",
+    "\n",
+    "            # Count the number of suspect/interesting\n",
+    "            suspect = np.where(ds[test_name] == \"3\")[0]\n",
+    "    \n",
+    "            # Count the number of fails\n",
+    "            bad = np.where(ds[test_name] == \"4'\")[0]\n",
+    "    \n",
+    "            test_results.update({test :{\n",
+    "                     \"total\": int(n),\n",
+    "                     \"good\": (len(good), np.round(len(good)/n*100, 2)),\n",
+    "                     \"suspect\": (len(suspect), np.round(len(suspect)/n*100, 2)),\n",
+    "                     \"fail\": (len(bad), np.round(len(bad)/n*100, 2))\n",
+    "                    }\n",
+    "                }\n",
+    "            )\n",
+    "        \n",
+    "        # Save the test results for each parameter\n",
+    "        results.update({\n",
+    "            param: test_results\n",
+    "        })\n",
+    "    \n",
+    "    return results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a3bcc6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qartod_results = qartod_results_summary(ds, parameters, [\"gross_range\", \"climatology\"])\n",
+    "qartod_results"
    ]
   }
  ],
