Run QARTOD tests on local data and save results

--- a/notebooks/03-Compare-local-test-with-OOINet-output.ipynb
+++ b/notebooks/03-Compare-local-test-with-OOINet-output.ipynb
@@ -76,6 +76,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "920f4bf1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import function to build relative path to data files\n",
+    "from qartod_testing.data_processing import build_data_path"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "ec35d745",
@@ -105,22 +116,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "920f4bf1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Build path to data files with local test results and load to workspace\n",
-    "from qartod_testing.data_processing import build_data_path\n",
-    "ds_path = build_data_path(refdes,method,stream,'prod',folder='interim')\n",
-    "\n",
-    "# Load data from .nc files\n",
-    "ds_expected = xr.open_dataset(ds_path)\n",
-    "ds_expected"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "e8fcb2ee",
@@ -137,12 +132,11 @@
    "outputs": [],
    "source": [
     "# Build path to data files with local test results and load to workspace\n",
-    "from qartod_testing.data_processing import build_data_path\n",
-    "ds_path = build_data_path(refdes,method,stream,'prod',folder='processed')\n",
+    "local_test_path = build_data_path(refdes,method,stream,'prod',folder='processed')\n",
     "\n",
-    "# Load data from .nc files\n",
-    "ds_local = xr.open_dataset(ds_path)\n",
-    "ds_local"
+    "# Load local test data from .nc files\n",
+    "results_local = xr.open_dataset(local_test_path)\n",
+    "results_local"
    ]
   },
   {
@@ -151,7 +145,7 @@
    "id": "a3193400",
    "metadata": {},
    "source": [
-    "### Extract expected QC results from local interim dataset"
+    "### Extract and parse expected QC results"
    ]
   },
   {
@@ -161,16 +155,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load expected results data from interim data folder\n",
+    "expected_ds_path = build_data_path(refdes,method,stream,'prod',folder='interim')\n",
+    "ds_expected = xr.open_dataset(expected_ds_path)\n",
+    "ds_expected\n",
+    "\n",
     "# Create a dictionary of key-value pairs of dataset variable name:alternate parameter name\n",
     "test_parameters={}\n",
-    "for var in ds_prod.variables:\n",
+    "for var in ds_expected.variables:\n",
     "    if \"qartod_results\" in var:\n",
     "        # Get the parameter name\n",
     "        param = var.split(\"_qartod\")[0]\n",
     "        \n",
     "        # Check if the parameter has an alternative ooinet_name\n",
-    "        if \"alternate_parameter_name\" in ds_prod[param].attrs:\n",
-    "            ooinet_name = ds_prod[param].attrs[\"alternate_parameter_name\"]\n",
+    "        if \"alternate_parameter_name\" in ds_expected[param].attrs:\n",
+    "            ooinet_name = ds_expected[param].attrs[\"alternate_parameter_name\"]\n",
     "        else:\n",
     "            ooinet_name = param\n",
     "        \n",
@@ -185,11 +184,82 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5cc90003",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Parse the variables with expected QARTOD flags into more easily useable dataset\n",
+    "import io\n",
+    "import ast\n",
+    "import requests\n",
+    "\n",
+    "def parse_qartod_executed(ds, parameters):\n",
+    "    \"\"\"\n",
+    "    Parses the qartod tests for the given parameter into separate variables.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    ds: xarray.DataSet\n",
+    "        The dataset downloaded from OOI with the QARTOD flags applied.\n",
+    "    parameters: list[str]\n",
+    "        The name of the parameters in the dataset to parse the QARTOD flags\n",
+    "        \n",
+    "    Returns\n",
+    "    -------\n",
+    "    ds: xarray.DataSet\n",
+    "        The dataset with the QARTOD test for the given parameters split out\n",
+    "        into new seperate data variables using the naming convention:\n",
+    "        {parameter}_qartod_{test_name}\n",
+    "    \"\"\"\n",
+    "    # For the params into a list if only a string\n",
+    "    if type(parameters) is not list:\n",
+    "        parameters = list(parameters)\n",
+    "    \n",
+    "    # Iterate through each parameter\n",
+    "    for param in parameters:\n",
+    "        # Generate the qartod executed name\n",
+    "        qartod_name = f\"{param}_qartod_executed\"\n",
+    "        \n",
+    "        if qartod_name not in ds.variables:\n",
+    "            continue\n",
+    "    \n",
+    "        # Fix the test types\n",
+    "        ds[qartod_name] = ds[qartod_name].astype(str)\n",
+    "    \n",
+    "        # Get the test order\n",
+    "        test_order = ds[qartod_name].attrs[\"tests_executed\"].split(\",\")\n",
+    "    \n",
+    "        # Iterate through the available tests and create separate variables with the results\n",
+    "        for test in test_order:\n",
+    "            test_index = test_order.index(test)\n",
+    "            test_name = f\"{param}_qartod_{test.strip()}\"\n",
+    "            ds[test_name] = ds[qartod_name].str.get(test_index)\n",
+    "\n",
+    "    return ds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7710de4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Put the test parameter names in the dataset into a list\n",
+    "parameters = [x for x in test_parameters.keys()]\n",
+    "parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "041a8ef7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "results_expected = ds_expected[test_parameters]"
+    "# Parse all of the variables with QARTOD tests applied into separate tests\n",
+    "results_expected = parse_qartod_executed(ds_expected, test_parameters)\n",
+    "results_expected"
    ]
   },
   {
@@ -210,7 +280,7 @@
    "source": [
     "comparison = []\n",
     "for param in test_parameters:\n",
-    "    comparison[param] = results_expected[param] == ds_local[param]"
+    "    comparison[param] = results_expected[param] == results_local[param]"
    ]
   },
   {
