Isolate gross range in notebook 03 from climatology in 04

--- a/notebooks/03-Compare-local-test-with-OOINet-output.ipynb
+++ b/notebooks/03-Compare-local-test-with-OOINet-output.ipynb
@@ -6,7 +6,7 @@
    "id": "c0f54a26",
    "metadata": {},
    "source": [
-    "# Compare local QARTOD Climatology and Gross Range Test Results to Expected Flags"
+    "# Compare local QARTOD Gross Range Test Results to Expected Flags"
    ]
   },
   {
