--- a/notebooks/04-Summary-statistics.ipynb
+++ b/notebooks/04-Summary-statistics.ipynb
@@ -6,7 +6,7 @@
    "id": "99412598",
    "metadata": {},
    "source": [
-    "# Descriptive Statistics\n",
+    "# Compare local QARTOD Climatology Test Results to Expected Flags\n",
     "Next, we want to calculate the statistics of the different QARTOD flags for the different tests that are applied to the different parameters in the dataset. The example ```qartod_results_summary``` below simply counts the total number of different flags (e.g 1, 3, 4) and their relative percentages for each test (gross range, climatology, etc) for each parameter that the tests area applied to. "
    ]
   },
